--- a/params.yaml
+++ b/params.yaml
@@ -1,8 +1,23 @@
+# Enable or disable data augmentation for training
 AUGMENTATION: True
-IMAGE_SIZE: [224, 224, 3] # as per VGG 16 model
+
+# Specify the input image size as required by the VGG16 model
+IMAGE_SIZE: [224, 224, 3] # Height, Width, channels (RGB)
+
+# Define the batch size for training
 BATCH_SIZE: 16
-INCLUDE_TOP: False
-EPOCHS: 5
-CLASSES: 2
-WEIGHTS: imagenet
-LEARNING_RATE: 0.02
+
+# Indicate whether to include the top classification layer of the model
+INCLUDE_TOP: False # Useful when using transfer learning without the top layer
+
+# Number of epochs for training the model
+EPOCHS: 3
+
+# Number of classes in the classification task
+CLASSES: 2 # Example: binary classification task (e.g. 0 and 1)
+
+# Pre-trained weights to use for the model
+WEIGHTS: imagenet # This indicates using ImageNet weights for transfer learning
+
+# Set the learning rate for the optimizer
+LEARNING_RATE: 0.01 # Controls how much to adjust weights during training
